<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/lblPriceRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_range"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPriceRange">

        <TextView
            android:id="@+id/lblFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/txtMinRange"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:hint="0"
            android:inputType="number"
            android:textAlignment="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPriceRange">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/to"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/txtMaxRange"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/edittext_rounded_corners"
            android:ems="10"
            android:hint="max"
            android:inputType="text"
            android:textAlignment="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>